003-chat-dep.yaml

kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: chat
  labels:
    app: chat

spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
        - name: chat
          image: vvyshko/node-web-app
          ports:
            - name: web
              containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: chat

spec:
  ports:
    - protocol: TCP
      name: web
      port: 8080
  selector:
    app: chat
